Moves assets to relative folder

--- a/moped-editor/public/index.html
+++ b/moped-editor/public/index.html
@@ -94,7 +94,7 @@
     <div id="root">
       <div class="matx-loader">
         <img
-          src="/assets/images/logo-circle.svg"
+          src="./assets/images/logo-circle.svg"
           alt=""
         />
         <div></div>
